--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,17 @@ h2{
 #portfolio{
     background-color: #dbdcde; /* lightgrey */
 }
+#portfolio .card-title{
+    color: #1f7798; /* mid blue */
+    font-size: 1.2rem;
+}        
+#portfolio .btn-outline-secondary:hover{
+    background-color: #1f7798;
+}
+#portfolio .card-text {
+    min-height: 120px;
+}
+
 /* Contact section*/
 #contact {
     background-color: white;
@@ -38,5 +49,16 @@ h2{
     background-size: cover;
     background-position: 50% 70%;
     min-height: 500px;
-    padding: 5% 7%
+    padding: 5% 7%;
+}
+
+/* Media queries */
+
+/* Use Bootstrap breakpoint for XL screens */
+@media screen and (min-width: 1200px) {
+    /* Fixes all portfolio card too tall on xl screens */
+    #portfolio .card-text {
+        min-height: auto;
+    }
+    
 }
