--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,12 @@ h2{
     font-family: "DM Serif Display, setrif";
     color: #184f63; /* dark-blue */
 }
+.sharp-corners,
+.sharp-corners * {
+   border-radius: 0;
+}
+
+
 /* About section */
 #about{ 
     background-color: white;
